fix z-index bug and implement nav link styling

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -24,19 +24,16 @@ body {
     font-family: sans-serif;
 }
 
-h1, .hero h2+p {
+h1 {
     font-family: var(--display-font-family);
     text-shadow: var(--display-shadow);
-}
-
-header, main, nav, footer {
-    z-index: -10;
 }
 
 button {
     border-radius: 0.25rem;
     padding: 0.5rem 1rem;
     font-size: 0.75rem;
+    cursor: pointer;
 }
 
 /* -- Header -- */
@@ -63,15 +60,13 @@ header .brand {
     margin-bottom: 0.5rem;
 }
 
-.brand__logo {
+header .brand__logo {
     /* font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width]))); */
     width: calc(100px + (150 - 100) * ((100vw - 300px) / (1600 - 300)));
     display: inline-block;
     vertical-align: bottom;
     filter: drop-shadow(var(--display-shadow));
 }
-
-/* -- Top Nav -- */
 
 header nav>ul {
     list-style: none;
@@ -90,22 +85,39 @@ header nav li+li::before {
     content: ' / '
 }
 
+header nav a {
+    color: inherit;
+    text-decoration: none;
+}
+
+header nav a:hover {
+    text-decoration: underline;
+}
+
+header nav a:active {
+    color: var(--hero-yellow);
+}
+
+header nav .current {
+    color: var(--hero-yellow);
+}
 
 /* -- Hero -- */
 
 .hero {
     position: relative;
+    z-index: 1;
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 75vh;
     background: var(--main-bg-blue);
     padding: 0.5rem 1rem;
-    z-index: -10;
 }
 
 .hero__content {
     max-width: 35rem;
+    z-index: 2;
 }
 
 .hero h2 {
@@ -151,7 +163,6 @@ header nav li+li::before {
     position: absolute;
     bottom: 1rem;
     right: 1rem;
-    z-index: -1;
 }
 
 .hero__bg img {
